[gd_scene load_steps=3 format=3 uid="uid://cpp1f87megsvi"]

[ext_resource type="Script" path="res://main_window.gd" id="1_nrrhj"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_cppi3"]
number_color = Color(0.392157, 1, 0.780392, 1)
symbol_color = Color(0.631373, 0.658824, 0.854902, 1)
function_color = Color(1, 1, 1, 1)
member_variable_color = Color(1, 1, 1, 1)
color_regions = {
"[ ]": Color(0.45098, 0.772549, 0.65098, 1)
}

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nrrhj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 101.0
grow_horizontal = 2

[node name="Top" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Logfile" type="HBoxContainer" parent="HBoxContainer/Top/HBoxContainer"]
layout_mode = 2

[node name="OpenLogfileButton" type="Button" parent="HBoxContainer/Top/HBoxContainer/Logfile"]
layout_mode = 2
text = "Open Logfile"

[node name="LogfileLabel" type="Label" parent="HBoxContainer/Top/HBoxContainer/Logfile"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current logfile: "
text_overrun_behavior = 3

[node name="Assets" type="HBoxContainer" parent="HBoxContainer/Top/HBoxContainer"]
layout_mode = 2

[node name="LinkAssetsButton" type="Button" parent="HBoxContainer/Top/HBoxContainer/Assets"]
layout_mode = 2
text = "Link Assets"

[node name="AssetsLabel" type="Label" parent="HBoxContainer/Top/HBoxContainer/Assets"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current base: "
text_overrun_behavior = 3

[node name="HBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Top"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Top/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="CurrentTime" type="Label" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "00:00:00"

[node name="Slash" type="Label" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="EndTime" type="Label" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "00:00:00"

[node name="Padding" type="TextureRect" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(12.29, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Top/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 2

[node name="DelayLabel" type="Label" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Delay" type="SpinBox" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 7
step = 0.1
value = 0.5
update_on_text_changed = true
suffix = "sec"

[node name="<<" type="Button" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "<<"

[node name="<" type="Button" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = " < "

[node name="LIVE" type="Button" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "LIVE"

[node name=">" type="Button" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = " > "

[node name=">>" type="Button" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = ">>"

[node name="Padding" type="TextureRect" parent="HBoxContainer/Top/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(3.05, 0)
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/Bottom"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="HBoxContainer/Bottom/Buttons"]
layout_mode = 2
text = "Refresh"

[node name="MapImage" type="Button" parent="HBoxContainer/Bottom/Buttons"]
layout_mode = 2
text = "Map Image"

[node name="ToggleParsedView" type="Button" parent="HBoxContainer/Bottom/Buttons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Parsed View"

[node name="ToggleLogView" type="Button" parent="HBoxContainer/Bottom/Buttons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Log View"

[node name="CharactersButton" type="Button" parent="HBoxContainer/Bottom/Buttons"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Characters"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HScrollBar" type="HScrollBar" parent="HBoxContainer/Bottom/HBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
max_value = 0.0
step = 1.0

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(600, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.log;Log File")

[node name="MapFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(600, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.tga, *.bmp, *.webp, *.svg;Map Image")

[node name="FolderDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(600, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="ParsedViewWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "Parsed View"
initial_position = 1
size = Vector2i(512, 512)
visible = false

[node name="PanelContainer" type="PanelContainer" parent="ParsedViewWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ParsedViewLabel" type="RichTextLabel" parent="ParsedViewWindow/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
mouse_force_pass_scroll_events = false
bbcode_enabled = true
scroll_following = true
selection_enabled = true
metadata/_edit_use_anchors_ = true

[node name="LogViewWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "Log View"
initial_position = 1
size = Vector2i(512, 512)
visible = false

[node name="LogViewLabel" type="TextEdit" parent="LogViewWindow"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
editable = false
wrap_mode = 1
minimap_draw = true
syntax_highlighter = SubResource("CodeHighlighter_cppi3")

[node name="Characters" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_top = 105.0
offset_right = 355.0
grow_vertical = 2

[node name="CharacterList" type="HFlowContainer" parent="Characters"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Top/HBoxContainer/Logfile/OpenLogfileButton" to="." method="_on_logfile_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Top/HBoxContainer/Assets/LinkAssetsButton" to="." method="_on_link_assets_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Top/HBoxContainer2/HBoxContainer2/<<" to="." method="_on_prev_step_pressed"]
[connection signal="toggled" from="HBoxContainer/Top/HBoxContainer2/HBoxContainer2/<" to="." method="_on_backwardplay_toggled"]
[connection signal="pressed" from="HBoxContainer/Top/HBoxContainer2/HBoxContainer2/LIVE" to="." method="_on_live_pressed"]
[connection signal="toggled" from="HBoxContainer/Top/HBoxContainer2/HBoxContainer2/>" to="." method="_on_play_toggled"]
[connection signal="pressed" from="HBoxContainer/Top/HBoxContainer2/HBoxContainer2/>>" to="." method="_on_next_movement_pressed"]
[connection signal="pressed" from="HBoxContainer/Bottom/Buttons/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Bottom/Buttons/MapImage" to="." method="_on_map_image_pressed"]
[connection signal="toggled" from="HBoxContainer/Bottom/Buttons/ToggleParsedView" to="." method="_on_toggle_parsed_view_toggled"]
[connection signal="toggled" from="HBoxContainer/Bottom/Buttons/ToggleLogView" to="." method="_on_toggle_log_view_toggled"]
[connection signal="toggled" from="HBoxContainer/Bottom/Buttons/CharactersButton" to="." method="_on_button_toggled"]
[connection signal="value_changed" from="HBoxContainer/Bottom/HBoxContainer2/HScrollBar" to="." method="_on_timeline_value_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="MapFileDialog" to="." method="_on_map_file_dialog_file_selected"]
[connection signal="dir_selected" from="FolderDialog" to="." method="_on_folder_dialog_dir_selected"]
[connection signal="close_requested" from="ParsedViewWindow" to="." method="_on_parsed_view_window_close_requested"]
[connection signal="close_requested" from="LogViewWindow" to="." method="_on_log_view_window_close_requested"]
